<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="gps_amount_hint">Betrag</string>
    <string name="gps_reference_number_hint">Verwendungszweck</string>
    <string name="gps_recipient_hint">Empfänger</string>
    <string name="gps_iban_hint">IBAN</string>
    <string name="gps_pay_button">Zur Banking App</string>
    <string name="gps_continue_to_overview">Weiter zur Übersicht</string>
    <string name="gps_bank_placeholder">Wird geladen...</string>
    <string name="gps_error_failed_to_load_image">Bild konnte nicht geladen werden</string>
    <string name="gps_error_input_invalid_iban">IBAN ist ungültig.</string>
    <string name="gps_error_input_amount_format">Ungültiges Format für Zahlbetrag</string>
    <string name="gps_error_input_recipient_empty">Empfänger ist notwendig.</string>
    <string name="gps_error_input_iban_empty">IBAN ist notwendig.</string>
    <string name="gps_error_input_amount_empty">Ungültig.</string>
    <string name="gps_error_input_reference_number_empty">Verwendungszweck ist notwendig.</string>
    <string name="gps_snackbar_retry">Wiederholen</string>
    <string name="gps_payment_details_info_bar_text">Bitte überprüfen Sie die vorausgefüllten Felder</string>

    <string name="gps_more_information_label">Bezahldaten an Banking-App übergeben und dort direkt bezahlen.</string>
    <string name="gps_more_information_underlined_part"><u>Mehr Informationen.</u></string>
    <string name="gps_select_bank_label">Bank auswählen und bezahlen</string>
    <string name="gps_select_bank">Bank auswählen</string>
    <string name="gps_your_bank">Ihre Bank</string>
    <string name="gps_pay_invoice_button">Rechnung bezahlen</string>
    <string name="gps_payment_powered_by_label">Powered by</string>
    <string name="gps_payment_provider_apps_list_description">Sie können die Rechnung nur bezahlen, wenn Sie ein Konto bei einer der unten aufgeführten Banken haben.</string>
    <string name="gps_drag_handle_expanded">Erweitert</string>
    <string name="gps_drag_handle_collapsed">Reduziert</string>

    <!--  More Information & FAQ  -->
    <string name="gps_more_information_title">Rechnungen ganz einfach mit der Banking-App bezahlen.</string>
    <string name="gps_more_information_details">Arztrechnungen und andere eingereichte Belege können jetzt ganz einfach bezahlt werden.\n\nDie Bezahldaten wie IBAN, Betrag, Empfänger und Verwendungszweck werden nahtlos in die Banking-App übergeben und dort nur noch bestätigt.\n\nSie können die Rechnung auch parken und innerhalb von 3 Monaten nach Upload begleichen.\n\nDie für die Zahlung notwendigen Daten werden verschlüsselt und sicher an Ihre Banking-App übertragen. Es gelten die Datenschutzbestimmungen Ihrer Bank.\n\nUnterstützt von den größten Bankinstituten. Integration durch
</string>
    <string name="gps_frequently_asked_questions">Häufig gestellte Fragen</string>
    <string name="gps_faq_1">Kann ich Rechnungen einreichen und später bezahlen?</string>
    <string name="gps_faq_2">Ist der Service kostenlos?</string>
    <string name="gps_faq_3">Sind meine Daten sicher?</string>
    <string name="gps_faq_4">Wer oder Was ist Gini?</string>
    <string name="gps_faq_5">Welches Format muss die eingereichte Rechnung haben?</string>
    <string name="gps_faq_6">Wie erkenne ich, welche Banken unterstützt werden?</string>
    <string name="gps_faq_answer_1">Ja, das ist möglich. So können insbesondere größere Beträge erst nach der erfolgten Erstattung bezahlt werden.</string>
    <string name="gps_faq_answer_2">Ja, die Übertragung der Bezahldaten in die gewählte Banking-App ist kostenlos. Für die eigentliche Überweisung können je nach Kontenmodell Gebühren anfallen – wenden Sie sich bitte für weitere Details an Ihre Bank.</string>
    <string name="gps_faq_answer_3">Ja! Die Übertragung der Daten an die Banking-App erfolgt verschlüsselt über einen Server von Gini. Gini nimmt die Zahlungsdaten entgegen und leitet sie in die Banking-App weiter. Dort besteht stets die Möglichkeit, die Zahlungsdaten zu überprüfen, bevor die Überweisung ausgeführt wird. Gini hat hierfür sowohl mit der Versicherung als auch mit den Banken Verträge geschlossen, und wir lassen uns regelmäßig von beiden auditieren.</string>
    <string name="gps_faq_answer_4">Gini macht das Bezahlen automagisch einfach. Das Münchner Unternehmen, das hinter der Fotoüberweisung steht, arbeitet mit den führenden deutschen Banken und Versicherungen zusammen, um die direkte Zahlung mit der Hausbank zu ermöglichen.
        Gini ist für maximale Datensicherheit ISO 27001 zertifiziert und betreibt eigene Rechner in einem ISO 27001 zertifizierten Rechenzentrum in Deutschland. Weitere Informationen finden Sie in der %p sowie auf der %s.</string>
    <string name="gps_faq_answer_5">Ob Foto einer Rechnung, Screenshot, oder digitales PDF – jedes Format ist geeignet. Bitte achten Sie lediglich darauf, dass alle Bezahlinformationen, wie IBAN, Empfänger, Verwendungszweck und Betrag sichtbar und nicht abgeschnitten sind.</string>
    <string name="gps_faq_answer_6">Im Bank-Auswahlmenü werden die Banken angezeigt, die, die Gini-Bezahlfunktion unterstützen. Voraussetzung für die Nutzung ist, dass Sie die mobile Banking-App ihrer Bank auf demselben Smartphone oder Tablet installiert haben, auf dem Sie die Versicherungs-App nutzen. Sollten Sie keine der Banking-Apps installiert haben, können Sie diese aus dem Apple App- oder Google Playstore herunterladen. Eine anschließende Aktivierung der Banking-App kann nötig sein.</string>
    <string name="gps_gini_link">Gini</string>
    <string name="gps_gini_website">Website von Gini</string>
    <string name="gps_gini_link_url">https://gini.net/</string>
    <string name="gps_more_information_fragment_title">Mehr Informationen</string>
    <string name="gps_privacy_policy">Datenschutzerklärung</string>
    <string name="gps_privacy_policy_link_url"/>

    <string name="gps_payment_provider_logo_content_description">logo</string>
    <string name="gps_close_content_description">Schließen</string>
    <string name="gps_invalid_amount_content_description">Ungültiger Zahlbetrag</string>
    <string name="gps_powered_by_gini_content_description">Powered by Gini</string>
    <string name="gps_select_bank_content_description">Wählen Sie Ihre Bank aus der Dropdown-Liste aus. Verwenden Sie die Pfeiltasten, um durch die Optionen zu navigieren, und drücken Sie die Eingabetaste, um Ihre Bank auszuwählen. Diese Auswahl ist erforderlich, um fortzufahren.</string>
    <string name="gps_invoice_image_content_description">Rechnungsdokument</string>

    <!--  Install App  -->
    <string name="gps_install_app_detail">Hinweis: Bitte aktualisieren oder installieren Sie zunächst die %s-App aus dem Google Play Store.</string>
    <string name="gps_install_app_title">Rechnungsdaten bereit zum Teilen mit der %s</string>
    <string name="gps_install_app_tap_to_continue">Tipp: Tippen Sie auf \'Weiter\', um die Zahlung in der %s-App abzuschließen.</string>
    <string name="gps_forward">Weiter</string>
    <string name="gps_play_store_content_description">Google Play Store</string>

    <!--  Open With bottom sheet  -->
    <string name="gps_open_with_title">Teilen Sie diesen QR-Zahlungscode mit Ihrer Banking-App</string>
    <string name="gps_open_with_details">Alternativ können Sie einen Screenshot von dieser Seite machen mit der Fotoüberweisung Funktion der %s öffnen.</string>
    <string name="gps_open_with_app">App</string>
    <string name="gps_open_with_button_text">Mit der %s-App teilen</string>
    <string name="gps_sharing_file">Sharing 1 file</string>
    <string name="gps_reference_number">Verwendungszweck</string>
    <string name="gps_payment_request_pdf_name"></string>
    <string name="gps_payment_request_pdf_name_default">Zahlungsinformationen</string>
    <string name="gps_qr_image_content_description">QR-Code zur Einleitung einer SEPA-Überweisung.</string>
    <string name="gps_share_with_button_content_description">Mit der %s-App teilen</string>

    <!--  Payment component  -->
    <string name="gps_bank_selection_dropdown_content_description">Wählen Sie Ihre Bank aus der Dropdown-Liste aus. Verwenden Sie die Pfeiltasten, um durch die Optionen zu navigieren, und drücken Sie die Eingabetaste, um Ihre Bank auszuwählen. Diese Auswahl ist erforderlich, um fortzufahren.</string>
    <string name="gps_to_banking_app_content_description">Zur Banking App. Es öffnet die Banking-App, um die Zahlung abzuschließen.</string>

    <string name="gps_generic_error_message">Oh da ist was schief gelaufen. Probieren Sie es bitte noch einmal.</string>
</resources>