<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gps_payment_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipient_layout"
        style="@style/GiniPaymentTheme.PaymentInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/gps_medium"
        android:nextFocusForward="@id/iban_layout"
        android:hint="@string/gps_recipient_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iban_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipient"
            style="@style/GiniPaymentTheme.PaymentInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/gps_large_28"
            android:paddingBottom="@dimen/gps_medium"
            android:paddingStart="@dimen/gps_medium_12"
            android:paddingEnd="@dimen/gps_zero"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iban_layout"
        style="@style/GiniPaymentTheme.PaymentInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/gps_medium"
        android:paddingTop="@dimen/gps_medium"
        android:hint="@string/gps_iban_hint"
        app:layout_constraintEnd_toStartOf="@id/amount_layout"
        app:layout_constraintHorizontal_weight="@dimen/gps_float_0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/amount_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iban"
            style="@style/GiniPaymentTheme.PaymentInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/gps_large_28"
            android:paddingBottom="@dimen/gps_medium"
            android:paddingStart="@dimen/gps_medium_12"
            android:paddingEnd="@dimen/gps_zero"
            android:nextFocusDown="@id/amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_layout"
        style="@style/GiniPaymentTheme.PaymentInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/gps_medium"
        app:errorContentDescription="@string/gps_invalid_amount_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="@dimen/gps_float_0.3"
        app:layout_constraintStart_toEndOf="@id/iban_layout"
        app:layout_constraintTop_toTopOf="@id/iban_layout"
        app:suffixText="€">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            style="@style/GiniPaymentTheme.PaymentInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/gps_large_28"
            android:paddingBottom="@dimen/gps_medium"
            android:paddingEnd="@dimen/gps_medium"
            android:digits="0123456789.,"
            android:hint="@string/gps_amount_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/iban_amount_barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iban_layout,amount_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/purpose_layout"
        style="@style/GiniPaymentTheme.PaymentInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/gps_medium"
        android:hint="@string/gps_reference_number_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iban_amount_barrier_bottom"
        app:layout_constraintBottom_toTopOf="@id/payment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purpose"
            style="@style/GiniPaymentTheme.PaymentInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/gps_large_28"
            android:paddingBottom="@dimen/gps_medium"
            android:paddingStart="@dimen/gps_medium_12"
            android:paddingEnd="@dimen/gps_zero" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gps_select_bank_layout"
        android:paddingEnd="@dimen/gps_medium"
        app:layout_constraintTop_toTopOf="@id/payment"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/gps_background_view"
            android:background="@drawable/gps_bordered_background"
            app:layout_constraintStart_toStartOf="@id/gps_select_bank_button"
            app:layout_constraintEnd_toEndOf="@id/gps_select_bank_button"
            app:layout_constraintTop_toTopOf="@id/gps_select_bank_button"
            app:layout_constraintBottom_toBottomOf="@id/gps_select_bank_button"/>

        <include android:id="@+id/gps_payment_provider_app_icon_holder"
            layout="@layout/gps_payment_provider_icon_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gps_medium"
            app:layout_constraintStart_toStartOf="@id/gps_select_bank_button"
            app:layout_constraintTop_toTopOf="@id/gps_select_bank_button"
            app:layout_constraintBottom_toBottomOf="@id/gps_select_bank_button"
            />

        <Button
            android:id="@+id/gps_select_bank_button"
            style="@style/GiniPaymentTheme.Widget.Button.PaymentProviderSelector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/gps_chevron_down_icon"
            android:clickable="false"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/gps_large"
            android:contentDescription="@string/gps_select_bank_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gps_pay_invoice_button"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payment"
        style="@style/GiniPaymentTheme.Widget.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gps_medium"
        android:enabled="false"
        android:text="@string/gps_pay_button"
        android:gravity="center"
        app:layout_constraintHorizontal_weight="2.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purpose_layout"
        app:layout_constraintStart_toEndOf="@id/gps_select_bank_layout" />

    <ProgressBar
        android:id="@+id/payment_progress"
        style="@style/GiniPaymentTheme.PaymentButtonProgressStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="@dimen/gps_medium"
        app:layout_constraintBottom_toBottomOf="@id/payment"
        app:layout_constraintEnd_toEndOf="@id/payment"
        app:layout_constraintStart_toStartOf="@id/payment"
        app:layout_constraintTop_toTopOf="@id/payment" />

    <include layout="@layout/gps_powered_by_gini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/gps_large"
        android:layout_marginBottom="@dimen/gps_medium"
        android:layout_marginTop="@dimen/gps_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment"
        app:layout_constraintEnd_toEndOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>